# VW-ChatBot

./: .env  .gitignore  render.yaml
backend/: config.py  database.py  document_parser.py  main.py  pyproject.toml  requirements.txt
backend/data/: chatbot.db
backend/models/: __init__.py  conversation.py  document.py
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: chat-empty.tsx  chat-header.tsx  chat-input.tsx  chat-interface.tsx  chat-message.tsx  conversation-list.tsx  document-manager.tsx
frontend/lib/: api.ts
