[project]
name = "rag-chatbot-backend"
version = "1.0.0"
description = "FastAPI backend with RAG capabilities for AI chatbot"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.1",
    "pypdf>=4.0.0",
]
